Solved image problem; spacing problem remains.

--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,8 @@ a:hover {
         margin: 5px auto 5px auto; 
     }
     .portrait {
-
+        display: block;
+        margin: 0 auto;
     }
 }
 
